--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.2.3",
     "mysql2": "^3.15.3",
     "node-cron": "^4.2.1",
+    "replicate": "^1.3.0",
     "winston": "^3.18.3"
   },
   "devDependencies": {
